# Budgetron

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
public/images/: README.md
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
src/engine/: calcEngine.js
src/state/: BudgetContext.jsx  defaultBudget.js  persistStore.js
src/tabs/: BusinessTab.jsx  DashboardTab.jsx  ExpensesTab.jsx  GroceriesTab.jsx  IncomeTab.jsx  RevenueTab.jsx
src/ui/window/: window.css  window.js
