[package]
name = "budgetron"
version = "0.1.0"
description = "Personal budgeting desktop app"
authors = ["mkb0020"]
edition = "2021"

[lib]
name = "budgetron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
